# genetic-sim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Cell.hpp  Environment.hpp  Genetic.hpp  Simulation.hpp
include/evo/: Environment.hpp  Genetics.hpp  Hash.hpp  Math.hpp  Random.hpp  RenderTypes.hpp  Renderer.hpp  Sim.hpp
include/maths/: Hash.hpp  Mat4.hpp  Vec3.hpp
include/ui/: Picking.hpp
src/: Environment.cpp  Genetics.cpp  Renderer.cpp  Sim.cpp  main.cpp
